<resources>
    <string name="app_name">Schedule</string>
    <string name="auth">Авторизація</string>
    <string name="schedule">Розклад</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="enter">ВХІД</string>
    <string name="forgot_password">Забули пароль?</string>
    <string name="registration">Реєстрація</string>
    <string name="et_year_happy_birthday">Рік народження</string>
    <string name="drop_password">СКИНУТИ ПАРОЛЬ</string>
    <string name="name_forgot_password">Відновлення облікового запису</string>
    <string name="first_nameid">nameId</string>
    <string name="tv_last_name">familyId</string>
    <string name="tv_student">Студент</string>
    <string name="groupid">groupId</string>
    <string name="btn_schedule">Розклад</string>
    <string name="btn_mark">Відмітитись</string>
    <string name="btn_journal">Журнал</string>
    <string name="btn_option">Налаштування</string>
    <string name="btn_leave">Вийти з акаунту</string>
    <string name="main_menu">Головне меню</string>
    <string name="btn_add_group">Створити групу</string>
    <string name="btn_edit_group">Редагувати</string>
    <string name="btn_delete_group">Видалити групу</string>
    <string name="et_name">Ім\'я та прізвище</string>
    <string name="btn_find_group">Доєднатися</string>
    <string name="tv_text_create">Введіть назву групи</string>
    <string name="et_hint_name">Назва групи</string>
    <string name="tv_code">Відправте цей код своїм одногрупникам, для того щоб вони змогли приєднатися. Його можна буде знайти в налаштуваннях.</string>
    <string name="tv_secret_code">1234567890</string>
    <string name="btn_OK">OK</string>
    <string name="tv_introduction_create_group">Створення групи</string>
    <string name="text_code_group">Введіть код групи:</string>
    <string name="btn_apply_name_group">Приняти назву</string>
    <string name="hint_code_group">Код групи</string>
    <string name="btn_apply_code">Прийняти код</string>
    <string name="tv_text_find_group">Пошук групи</string>

    <string-array name="users">
        <item>Студент</item>
        <item>Староста</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_monday">Понеділок</string>
    <string name="text_friday">П\'ятниця</string>
    <string name="text_saturday">Субота</string>
    <string name="text_sunday">Неділя</string>
    <string name="text_thursday">Четвер</string>
    <string name="text_tuesday">Вівторок</string>
    <string name="text_wednesday">Середа</string>
    <string name="number_first">1.</string>
    <string name="number_second">2.</string>
    <string name="number_third">3.</string>
    <string name="number_fourth">4.</string>
    <string name="number_fifth">5.</string>
    <string name="number_sixth">6.</string>
    <string name="number_seventh">7.</string>
    <string name="number_eight">8.</string>
    <string name="lessonId">lessonId</string>
    <string name="text_first_week">Тиждень 1</string>
    <string name="text_second_week">Тиждень 2</string>
    <string name="tv_student_name">Ім\'я студента</string>
    <string name="text_mark">Відмітитись</string>
    <string name="tv_journal">Журнал</string>
    <string name="editing_of_schedule">Редагування розкладу</string>
</resources>