<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateGroupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#304ffe"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@mipmap/emblem_asset_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/tv_introduction_create_group"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_text_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/tv_text_create"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_create_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_name"

            android:padding="5dp" />

        <Button
            android:id="@+id/btn_apply_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/btn_apply_name_group" />
    </LinearLayout>

    <TextView
        android:id="@+id/code_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:text="@string/tv_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_create_code_group"
            android:text="@string/tv_secret_code"
            android:visibility="gone"
            app:drawableRightCompat="@drawable/content_copy"
            tools:ignore="InvalidId" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:text="@string/btn_OK" />
    </LinearLayout>

</LinearLayout>