<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        android:orientation="horizontal"
        android:background="@drawable/border"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_fisrtname"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="16dp"
            android:text="@string/first_nameid"
            android:textSize="32sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last_name"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="16dp"
            android:text="@string/tv_last_name"
            android:textSize="32sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_edit_text"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/email"
            android:background="@drawable/border"
            android:layout_marginStart="160dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:id="@+id/student"
            android:text="@string/tv_student"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:id="@+id/tv_groupId"
            android:text="@string/groupid"
            android:layout_marginStart="180dp"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_weight="100dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_gradient"
        android:id="@+id/btn_sсhedule"
        android:text="@string/btn_schedule"
        />


        <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_weight="100dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
            android:background="@drawable/button_gradient"
        android:id="@+id/btn_mark"
        android:text="@string/btn_mark" />


        <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_weight="100dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
            android:background="@drawable/button_gradient"
        android:id="@+id/btn_journal"
        android:text="@string/btn_journal"
        />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_weight="100dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_gradient"
            android:id="@+id/btn_option"
            android:text="@string/btn_option"
            />


    </LinearLayout>

</LinearLayout>