<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindGroup"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#304ffe"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@mipmap/emblem_asset_foreground"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/tv_text_find_group"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_input_code_group"
        android:layout_marginTop="10dp"
        android:text="@string/text_code_group"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_find_group"
        android:hint="@string/hint_code_group"
        android:inputType="text|number"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_apply_find_group"
        android:text="@string/btn_apply_code"/>

</LinearLayout>
</LinearLayout>