<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Schedule.Days.MondayFirst"
    tools:ignore="ExtraText"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#304ffe"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@mipmap/emblem_asset_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/text_first_week"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_monday_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/text_monday"
            android:textSize="32sp" />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:id="@+id/tv_first_number"
        android:text="@string/number_first"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/tv_monday_first_lesson_first"
        android:layout_marginStart="80dp"
        android:textSize="16sp"
        android:text="@string/lessonId"
        android:padding="10dp"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_second_number"
        android:padding="10dp"
        android:text="@string/number_second"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_monday_first_lesson_second"
            android:layout_marginStart="80dp"
            android:textSize="16sp"
            android:text="@string/lessonId"
            android:padding="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_third_number"
        android:padding="10dp"
        android:text="@string/number_third"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_monday_first_lesson_third"
            android:layout_marginStart="80dp"
            android:textSize="16sp"
            android:text="@string/lessonId"
            android:padding="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/tv_fourth_number"
        android:text="@string/number_fourth"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_monday_first_lesson_fourth"
            android:layout_marginStart="80dp"
            android:textSize="16sp"
            android:text="@string/lessonId"
            android:padding="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/tv_fifth_number"
        android:text="@string/number_fifth"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_monday_first_lesson_fifth"
            android:layout_marginStart="80dp"
            android:textSize="16sp"
            android:text="@string/lessonId"
            android:padding="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border"
        >

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/tv_sixth_number"
        android:text="@string/number_sixth" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_monday_first_lesson_sixth"
        android:layout_marginStart="80dp"
        android:textSize="16sp"
        android:text="@string/lessonId"
        android:padding="10dp"
        />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/tv_seventh_number"
        android:text="@string/number_seventh"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_monday_first_lesson_seventh"
        android:layout_marginStart="80dp"
        android:textSize="16sp"
        android:text="@string/lessonId"
        android:padding="10dp"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/tv_eight_number"
        android:text="@string/number_eight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_monday_first_lesson_eight"
            android:layout_marginStart="80dp"
            android:textSize="16sp"
            android:text="@string/lessonId"
            android:padding="10dp"
            />
    </LinearLayout>
</LinearLayout>
</LinearLayout>